# jhrmnn.github.io

./: .devcontainer.json  .flake8  .gitignore  CNAME  Dockerfile  LICENSE  Makefile  README.md  check_derived.py  check_sources.py  common.py  cv.html.in  cv.tex.in  cv.txt.in  federate_native.py  fetch.py  package-lock.json  package.json  posts.py  pyproject.toml  refs.json  render.py  reuse_data.py  send_webmentions.py  setup.cfg  styles.css  tsconfig.json  wrangler.toml
.claude/hooks/: session-start.sh
.github/workflows/: build.yaml  cv.yaml
assets/: _Jan Hermann_ - _Google Scholar_.html  superscript.csl
data/: cv.yaml  extras.yaml  hubs.md  refs.json  tools.yaml
posts/: 2024-12-30-good-evil.md  2025-12-26-forbidden-fruit.md  2026-02-24-competitiveness-cooperation.md  2026-05-05-consciousness.md  2026-06-09-bridgy-test.md  2026-06-15-llm-skeptic.md  2026-07-08-soul-god.md  2026-07-11-deutschland-haesslich.md  2026-07-12-two-translations.md
templates/: _footer.html  _head.html  blog.html.in  cv.html.in  cv.tex.in  cv.txt.in  index.html.in  post.html.in  styles.css
tests/: test_render.py
tests/snapshots/: cv.txt
worker/: README.md  activitypub.ts  deliver.ts  httpsig.ts  inbox.ts  index.ts  keys.ts  types.ts
