[tool.poetry]
name = "cv"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6"
Jinja2 = "^3"
requests = "^2.25.1"
scholarly = "^1.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=19"
flake8-comprehensions = ">=3"
flake8-quotes = ">=3"
black = ">=20-beta.0"
pep8-naming = ">=0.7"
isort = ">=5"

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
