[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6"
Jinja2 = "^3"
requests = "^2.25.1"
scholarly = "^1.2.0"

[tool.poetry.dev.dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=19"
flake8-comprehensions = ">=3"
flake8-quotes = ">=3"
black = ">=20-beta.0"
pep8-naming = ">=0.7"
isort = ">=5"

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
preview = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 85
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_typing = ["typing", "typing_extensions"]
no_lines_before = "TYPING"
combine_as_imports = true
skip_gitignore = true
